static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');

html {
  scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
    color: #373737;
}

.fadeIn {
  display: none;
} 

/*  ---------------------- * Index page and navigation */ 

.sidenav li>a {
    color: #555;
    font-size: 3rem;
    padding: 80px 0px 0px 0px;
    text-align: center;
}

.sidenav li>a>i {
    color: #555;
    font-size: 3rem;
    padding: 0px;
    float: none;
    margin: 0px;
}

 #homePageImage {
        position: fixed;
        left: 0px;
        width: auto;
        height: 100vh;
        z-index: -1;
        background-position-x: 0;
    }

.callToAction {
    justify-content: center;
    align-items: center;
    display: flex;
    position: relative;
    flex-flow: column;
    height: 100vh;
}

.callToAction h1 {
    padding: 5px 150px;
    color: #555;
    margin: 0;
}

.callToAction h2 {
    font-size: 1.5rem;
    color: #555;
    margin: 0;
    padding: 20px;
}

.callToAction h2:hover {
    color: #6a5acd;
}

.overlay {
    width: 100%;
    height: 100%;
    z-index: 1;
    background-color: rgba(32, 17, 17, 0.4);
    margin: 0;
    padding: 0;
}

.seeAllRecipes a {
    color:#555;
    text-decoration: none;
}

.seeAllRecipes {
    text-align: center;
}

.seeAllRecipes a:hover {
    color: #6a5acd;
}

#aboutText {
    font-size: 1.75rem;
    font-weight: 500;
    padding-bottom: 40px;
}

#thirdParty {
    padding-bottom: 40px;
}

#homePageSearch {
    width: 100%;
    height: 40px;
    font-family: 'Poppins', sans-serif;
    border: 1px solid #4e342e;
    color: #fff;
    background-color: #4e342e;
}

#homePageSearch:hover {
    color: #fff;
}

/*  ---------------------- * Registration page */ 

.signIn {
    padding: 30px 0px;
}

/*  ---------------------- * Profile */ 

.welcome {
    font-size: 2rem;
}

/*  ---------------------- * Recipe cards and results */ 

.search {
    padding: 30px 0px 20px 0px;
}

.searchTitle {
    padding-top: 30px;
}

.create-recipe {
    border: 2px dashed #a1a1a1;
    position: relative;
    display: flex;
    flex-direction: column;
    color: #333;
    justify-content: center;
    align-items: center;
    padding: 40px;
}

.prep-time {
    float: left; 
    padding-right: 5px;  
}

.card-image img {
    height: 250px;
    width: 250px;
    object-fit: cover;
}

.card-image img {
    height: 250px;
    width: 250px;
    object-fit: cover;
}

.card .card-title {
    color: rgba(24, 24, 13);
    font-size: 16px;
}

/*  ---------------------- * Recipe page */ 

.recipeHeader {
    padding-top: 50px;
}

.recipeHeader h1 {
    font-size: 3rem;
}

#page-image {
    height: 300px;
    width: 300px;
    object-fit: cover;
}

#prep-time {
    display: inline-block;
}


/*  ---------------------- * Comments */ 

.comment {
    padding-top: 50px;
}

#commentUser {
    color: #0093FF;
}

/*  ---------------------- # Footer */ 

footer a {
    color: inherit;
    padding: 5px;
}

.contactLinks {
    font-family: "poppins", sans-serif;
}

footer a:hover { 
    color: #6a5acd;
    font-weight: 100;
}


/*  ---------------------- # Media queries */

/*  Medium devices (Tablets, 768px and up) */ 

@media (min-width: 768px) { 

    #homePageImage {
        width: auto;
        height: 100vh;
    }

}

/*  Large devices (desktops, 992px and up) */ 

@media (min-width: 992px) { 

    nav .brand-logo {
        padding-left: 20px;
    }

    #homePageImage {
        width: 100vw;
        height: auto;
    }

    .welcome {
        font-size: 2.5rem;
    }

    
}

